--- a/Bazaar Ghar/Base.lproj/LaunchScreen.storyboard
+++ b/Bazaar Ghar/Base.lproj/LaunchScreen.storyboard
@@ -4,8 +4,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,21 +13,35 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
+                    <view key="view" contentMode="scaleToFill" id="5Fm-Eh-r7x">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash" translatesAutoresizingMaskIntoConstraints="NO" id="QRS-vF-JR7">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6ap-JT-tcp">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                            </imageView>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mysouqImg" translatesAutoresizingMaskIntoConstraints="NO" id="Lbk-vm-ork">
+                                        <rect key="frame" x="67.666666666666686" y="342" width="240" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="t8F-X5-8vv"/>
+                                            <constraint firstAttribute="width" constant="240" id="zRG-hl-VAj"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" name="headercolor"/>
+                                <constraints>
+                                    <constraint firstItem="Lbk-vm-ork" firstAttribute="centerY" secondItem="6ap-JT-tcp" secondAttribute="centerY" id="fcP-F9-TFe"/>
+                                    <constraint firstItem="Lbk-vm-ork" firstAttribute="centerX" secondItem="6ap-JT-tcp" secondAttribute="centerX" id="fxJ-hV-GhD"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <viewLayoutGuide key="safeArea" id="uOY-ge-hJu"/>
+                        <color key="backgroundColor" name="headercolor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="QRS-vF-JR7" secondAttribute="bottom" id="0Ev-4g-wQD"/>
-                            <constraint firstItem="QRS-vF-JR7" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="DGj-5Z-Yko"/>
-                            <constraint firstAttribute="trailing" secondItem="QRS-vF-JR7" secondAttribute="trailing" id="nVy-yT-rVf"/>
-                            <constraint firstItem="QRS-vF-JR7" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="pbO-J7-Psb"/>
+                            <constraint firstItem="6ap-JT-tcp" firstAttribute="leading" secondItem="uOY-ge-hJu" secondAttribute="leading" id="3Tq-n3-rGf"/>
+                            <constraint firstItem="6ap-JT-tcp" firstAttribute="top" secondItem="5Fm-Eh-r7x" secondAttribute="top" id="QKP-wb-Adj"/>
+                            <constraint firstAttribute="bottom" secondItem="6ap-JT-tcp" secondAttribute="bottom" id="btE-ag-UUE"/>
+                            <constraint firstItem="uOY-ge-hJu" firstAttribute="trailing" secondItem="6ap-JT-tcp" secondAttribute="trailing" id="iuI-tA-fqf"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -37,9 +51,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Splash" width="366" height="742"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="mysouqImg" width="600" height="117"/>
+        <namedColor name="headercolor">
+            <color red="0.023529411764705882" green="0.71764705882352942" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
