--- a/Bazaar Ghar/StoryBoards/Base.lproj/ChatStoryBoard.storyboard
+++ b/Bazaar Ghar/StoryBoards/Base.lproj/ChatStoryBoard.storyboard
@@ -31,21 +31,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JAE-op-d4d">
-                                <rect key="frame" x="0.0" y="59" width="393" height="60"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="110"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Faster" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oGS-Jz-YZ2">
-                                        <rect key="frame" x="35" y="20" width="57.333333333333343" height="20.333333333333329"/>
+                                        <rect key="frame" x="168" y="67.333333333333329" width="57.333333333333343" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" name="ArialHebrew-Bold" family="Arial Hebrew" pointSize="19"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJP-VO-Wgu">
-                                        <rect key="frame" x="0.0" y="12.666666666666671" width="35" height="35"/>
+                                        <rect key="frame" x="0.0" y="60" width="35" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="35" id="1hH-DJ-VDm"/>
                                             <constraint firstAttribute="height" constant="35" id="iWb-Xg-SyG"/>
                                         </constraints>
-                                        <color key="tintColor" white="0.080000000000000002" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain">
                                             <imageReference key="image" image="arrow.backward" catalog="system" symbolScale="large"/>
@@ -55,7 +55,7 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ayl-X7-oyq">
-                                        <rect key="frame" x="0.0" y="59.666666666666671" width="393" height="0.3333333333333357"/>
+                                        <rect key="frame" x="0.0" y="109.66666666666667" width="393" height="0.3333333333333286"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="0.5" id="Xu7-23-OMT"/>
@@ -66,17 +66,16 @@
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="Ayl-X7-oyq" secondAttribute="bottom" id="1vs-0V-Vhj"/>
                                     <constraint firstItem="Ayl-X7-oyq" firstAttribute="centerX" secondItem="JAE-op-d4d" secondAttribute="centerX" id="Acx-Ii-MXn"/>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="oGS-Jz-YZ2" secondAttribute="trailing" constant="20" symbolic="YES" id="Kfu-M4-gOI"/>
+                                    <constraint firstAttribute="bottom" secondItem="HJP-VO-Wgu" secondAttribute="bottom" constant="15" id="EJD-yh-M1J"/>
                                     <constraint firstItem="Ayl-X7-oyq" firstAttribute="width" secondItem="JAE-op-d4d" secondAttribute="width" id="Rzt-J0-jlH"/>
                                     <constraint firstItem="HJP-VO-Wgu" firstAttribute="leading" secondItem="JAE-op-d4d" secondAttribute="leading" id="SpL-4d-yTs"/>
-                                    <constraint firstItem="HJP-VO-Wgu" firstAttribute="centerY" secondItem="JAE-op-d4d" secondAttribute="centerY" id="fE1-7J-06Z"/>
-                                    <constraint firstItem="oGS-Jz-YZ2" firstAttribute="leading" secondItem="HJP-VO-Wgu" secondAttribute="trailing" id="gx7-c0-5hG"/>
-                                    <constraint firstAttribute="height" constant="60" id="gxF-iT-0Dk"/>
-                                    <constraint firstItem="oGS-Jz-YZ2" firstAttribute="centerY" secondItem="HJP-VO-Wgu" secondAttribute="centerY" id="phC-xT-Aea"/>
+                                    <constraint firstItem="oGS-Jz-YZ2" firstAttribute="centerY" secondItem="HJP-VO-Wgu" secondAttribute="centerY" id="TL2-Yk-9Tp"/>
+                                    <constraint firstAttribute="height" constant="110" id="gxF-iT-0Dk"/>
+                                    <constraint firstItem="oGS-Jz-YZ2" firstAttribute="centerX" secondItem="JAE-op-d4d" secondAttribute="centerX" id="wtw-Y1-wjB"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NxG-fd-nD1">
-                                <rect key="frame" x="5" y="119" width="383" height="639"/>
+                                <rect key="frame" x="5" y="110" width="383" height="648"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="OIX-O4-5ce" id="Pcn-Ud-74m"/>
@@ -164,7 +163,7 @@
                         <constraints>
                             <constraint firstItem="NxG-fd-nD1" firstAttribute="leading" secondItem="FAb-O7-Xh7" secondAttribute="leading" constant="5" id="8uX-ID-qRi"/>
                             <constraint firstItem="Gct-XU-taj" firstAttribute="top" secondItem="NxG-fd-nD1" secondAttribute="bottom" id="FPO-eg-O4V"/>
-                            <constraint firstItem="JAE-op-d4d" firstAttribute="top" secondItem="FAb-O7-Xh7" secondAttribute="top" id="Kqj-vG-ixv"/>
+                            <constraint firstItem="JAE-op-d4d" firstAttribute="top" secondItem="DTz-OV-RgQ" secondAttribute="top" id="Kqj-vG-ixv"/>
                             <constraint firstItem="FAb-O7-Xh7" firstAttribute="trailing" secondItem="Gct-XU-taj" secondAttribute="trailing" id="Spk-Ox-TRU"/>
                             <constraint firstItem="NxG-fd-nD1" firstAttribute="top" secondItem="JAE-op-d4d" secondAttribute="bottom" id="XBi-jy-cJX"/>
                             <constraint firstItem="FAb-O7-Xh7" firstAttribute="bottom" secondItem="Gct-XU-taj" secondAttribute="bottom" id="ec4-Gl-hSx"/>
@@ -178,6 +177,7 @@
                     <connections>
                         <outlet property="ChatTblV" destination="NxG-fd-nD1" id="Djb-7r-r8m"/>
                         <outlet property="attachmentBtn" destination="5GN-pK-6pH" id="IGx-lB-Hzq"/>
+                        <outlet property="headerBackgroudView" destination="JAE-op-d4d" id="ZDS-uB-183"/>
                         <outlet property="inputViewBottom" destination="ec4-Gl-hSx" id="cqD-D3-Y86"/>
                         <outlet property="messageTF" destination="6Lz-i8-3aS" id="UgI-ee-vKJ"/>
                         <outlet property="namestore" destination="oGS-Jz-YZ2" id="fUc-2w-iqF"/>
@@ -474,7 +474,7 @@
             <color red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="headercolor">
-            <color red="0.023529411764705882" green="0.61568627450980395" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.023529411764705882" green="0.71764705882352942" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -483,7 +483,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
